--- a/src/windows/SettingWindow.xaml
+++ b/src/windows/SettingWindow.xaml
@@ -117,7 +117,7 @@
                         </StackPanel>
                     </ui:Button>
 
-					<ui:Button
+                    <ui:Button
                         x:Name="YoudaoButton"
                         Margin="10,5,10,0"
                         Padding="10"
@@ -125,11 +125,10 @@
                         HorizontalContentAlignment="Left"
                         Click="NavigationButton_Click"
                         Tag="Youdao">
-						<StackPanel Orientation="Horizontal">
-							<TextBlock VerticalAlignment="Center" Text="Youdao" />
-						</StackPanel>
-					</ui:Button>
-					
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock VerticalAlignment="Center" Text="Youdao" />
+                        </StackPanel>
+                    </ui:Button>
 
                     <ui:Button
                         x:Name="MTranServerButton"
@@ -144,8 +143,19 @@
                         </StackPanel>
                     </ui:Button>
 
-					<ui:Button
+                    <ui:Button
                         x:Name="BaiduButton"
+                        Margin="10,5,10,0"
+                        Padding="10"
+                        HorizontalAlignment="Stretch"
+                        HorizontalContentAlignment="Left"
+                        Click="NavigationButton_Click"
+                        Tag="Baidu">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock VerticalAlignment="Center" Text="Baidu" />
+                        </StackPanel>
+                    </ui:Button>
+
                     <ui:Button
                         x:Name="MTranServerCoreButton"
                         Margin="10,5,10,0"
@@ -153,11 +163,6 @@
                         HorizontalAlignment="Stretch"
                         HorizontalContentAlignment="Left"
                         Click="NavigationButton_Click"
-                        Tag="Baidu">
-						<StackPanel Orientation="Horizontal">
-							<TextBlock VerticalAlignment="Center" Text="Baidu" />
-						</StackPanel>
-					</ui:Button>
                         Tag="MTranServerCore">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock VerticalAlignment="Center" Text="MTranServerCore" />
@@ -452,67 +457,66 @@
                                 </Grid>
                             </ui:Card>
                         </StackPanel>
-						
-						<StackPanel x:Name="YoudaoSection" Margin="20">
-							<TextBlock
+                        
+                        <StackPanel x:Name="YoudaoSection" Margin="20">
+                            <TextBlock
                                 Margin="10"
                                 FontSize="20"
                                 FontWeight="Medium"
                                 Text="Youdao" />
-							<ui:Card Padding="15">
-								<Grid x:Name="YoudaoGrid">
-									<Grid.RowDefinitions>
-										<RowDefinition Height="Auto" />
-										<RowDefinition Height="Auto" />
-									</Grid.RowDefinitions>
-									<Grid.ColumnDefinitions>
-										<ColumnDefinition Width="Auto" />
-										<ColumnDefinition Width="Auto" />
-									</Grid.ColumnDefinitions>
+                            <ui:Card Padding="15">
+                                <Grid x:Name="YoudaoGrid">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
 
-									<StackPanel
+                                    <StackPanel
                                         Grid.Row="0"
                                         Grid.Column="0"
                                         Margin="15,0,0,0"
                                         Orientation="Vertical">
-										<ui:TextBlock Margin="2.5,0,0,5" Text="API Url" />
-										<ui:TextBox
+                                        <ui:TextBlock Margin="2.5,0,0,5" Text="API Url" />
+                                        <ui:TextBox
                                             Width="130"
                                             Height="30"
                                             Padding="10,4,10,7"
                                             FontSize="13.3"
                                             Text="{Binding Configs[Youdao].ApiUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-									</StackPanel>
-									<StackPanel
+                                    </StackPanel>
+                                    <StackPanel
                                         Grid.Row="1"
                                         Grid.Column="0"
                                         Margin="15,10,0,0"
                                         Orientation="Vertical">
-										<ui:TextBlock Margin="2.5,0,0,5" Text="APP Key" />
-										<ui:TextBox
+                                        <ui:TextBlock Margin="2.5,0,0,5" Text="APP Key" />
+                                        <ui:TextBox
                                             Width="130"
                                             Height="30"
                                             Padding="10,4,10,7"
                                             FontSize="13.3"
                                             Text="{Binding Configs[Youdao].AppKey, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-									</StackPanel>
-									<StackPanel
+                                    </StackPanel>
+                                    <StackPanel
                                         Grid.Row="1"
                                         Grid.Column="1"
                                         Margin="15,10,0,0"
                                         Orientation="Vertical">
-										<ui:TextBlock Margin="2.5,0,0,5" Text="APP Secret" />
-										<ui:TextBox
+                                        <ui:TextBlock Margin="2.5,0,0,5" Text="APP Secret" />
+                                        <ui:TextBox
                                             Width="200"
                                             Height="30"
                                             Padding="10,4,10,7"
                                             FontSize="13.3"
                                             Text="{Binding Configs[Youdao].AppSecret, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-									</StackPanel>
-								</Grid>
-							</ui:Card>
-						</StackPanel>
-						
+                                    </StackPanel>
+                                </Grid>
+                            </ui:Card>
+                        </StackPanel>
 
                         <StackPanel x:Name="MTranServerSection" Margin="20">
                             <TextBlock
@@ -544,6 +548,7 @@
                                             IsEditable="True"
                                             Text="{Binding Configs[MTranServer].SourceLanguage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                             <ComboBoxItem Content="en" />
+                                            <ComboBoxItem Content="zh" />
                                             <ComboBoxItem Content="ja" />
                                             <ComboBoxItem Content="fr" />
                                             <ComboBoxItem Content="ko" />
@@ -552,6 +557,23 @@
                                     </StackPanel>
                                     <StackPanel
                                         Grid.Row="1"
+                                        Margin="15,10,0,0"
+                                        Orientation="Vertical">
+                                        <ui:TextBlock Margin="2.5,0,0,5" Text="Target Language" />
+                                        <ComboBox
+                                            Width="200"
+                                            Height="30"
+                                            Padding="10,4,10,7"
+                                            FontSize="13.3"
+                                            IsEditable="True"
+                                            Text="{Binding Configs[MTranServer].TargetLanguage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                            <ComboBoxItem Content="zh" />
+                                            <ComboBoxItem Content="en" />
+                                            <ComboBoxItem Content="ja" />
+                                        </ComboBox>
+                                    </StackPanel>
+                                    <StackPanel
+                                        Grid.Row="2"
                                         Margin="15,10,0,0"
                                         Orientation="Vertical">
                                         <ui:TextBlock Margin="2.5,0,0,5" Text="API Url" />
@@ -563,7 +585,7 @@
                                             Text="{Binding Configs[MTranServer].ApiUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                     </StackPanel>
                                     <StackPanel
-                                        Grid.Row="2"
+                                        Grid.Row="3"
                                         Margin="15,10,0,0"
                                         Orientation="Vertical">
                                         <ui:TextBlock Margin="2.5,0,0,5" Text="API Key" />
@@ -579,56 +601,7 @@
                         </StackPanel>
 
 
-						<StackPanel x:Name="BaiduSection" Margin="20">
-							<TextBlock
-                                Margin="10"
-                                FontSize="20"
-                                FontWeight="Medium"
-                                Text="Baidu" />
-							<ui:Card Padding="15">
-								<Grid x:Name="BaiduGrid">
-									<Grid.RowDefinitions>
-										<RowDefinition Height="Auto" />
-										<RowDefinition Height="Auto" />
-									</Grid.RowDefinitions>
-									<Grid.ColumnDefinitions>
-										<ColumnDefinition Width="Auto" />
-										<ColumnDefinition Width="Auto" />
-									</Grid.ColumnDefinitions>
-
-									<StackPanel
-                                        Grid.Row="0"
-                                        Grid.Column="0"
-                                        Margin="15,0,0,0"
-                                        Orientation="Vertical">
-										<ui:TextBlock Margin="2.5,0,0,5" Text="API Url" />
-										<ui:TextBox
-                                            Width="130"
-                                            Height="30"
-                                            Padding="10,4,10,7"
-                                            FontSize="13.3"
-                                            Text="{Binding Configs[Baidu].ApiUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-									</StackPanel>
-									<StackPanel
-                                        Grid.Row="1"
-                                        Grid.Column="0"
-                                        Margin="15,10,0,0"
-                                        Orientation="Vertical">
-										<ui:TextBlock Margin="2.5,0,0,5" Text="APP ID" />
-										<ui:TextBox
-                                            Width="130"
-                                            Height="30"
-                                            Padding="10,4,10,7"
-                                            FontSize="13.3"
-                                            Text="{Binding Configs[Baidu].AppId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-									</StackPanel>
-									<StackPanel
-                                        Grid.Row="1"
-                                        Grid.Column="1"
-                                        Margin="15,10,0,0"
-                                        Orientation="Vertical">
-										<ui:TextBlock Margin="2.5,0,0,5" Text="APP Secret" />
-										<ui:TextBox
+                        
 
                         <StackPanel x:Name="MTranServerCoreSection" Margin="20">
                             <TextBlock
@@ -660,6 +633,7 @@
                                             IsEditable="True"
                                             Text="{Binding Configs[MTranServerCore].SourceLanguage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                             <ComboBoxItem Content="en" />
+                                            <ComboBoxItem Content="zh" />
                                             <ComboBoxItem Content="ja" />
                                             <ComboBoxItem Content="fr" />
                                             <ComboBoxItem Content="ko" />
@@ -668,6 +642,23 @@
                                     </StackPanel>
                                     <StackPanel
                                         Grid.Row="1"
+                                        Margin="15,10,0,0"
+                                        Orientation="Vertical">
+                                        <ui:TextBlock Margin="2.5,0,0,5" Text="Target Language" />
+                                        <ComboBox
+                                            Width="200"
+                                            Height="30"
+                                            Padding="10,4,10,7"
+                                            FontSize="13.3"
+                                            IsEditable="True"
+                                            Text="{Binding Configs[MTranServerCore].TargetLanguage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                            <ComboBoxItem Content="zh" />
+                                            <ComboBoxItem Content="en" />
+                                            <ComboBoxItem Content="ja" />
+                                        </ComboBox>
+                                    </StackPanel>
+                                    <StackPanel
+                                        Grid.Row="2"
                                         Margin="15,10,0,0"
                                         Orientation="Vertical">
                                         <ui:TextBlock Margin="2.5,0,0,5" Text="API Url" />
@@ -679,29 +670,80 @@
                                             Text="{Binding Configs[MTranServerCore].ApiUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                     </StackPanel>
                                     <StackPanel
-                                        Grid.Row="2"
+                                        Grid.Row="3"
                                         Margin="15,10,0,0"
                                         Orientation="Vertical">
                                         <ui:TextBlock Margin="2.5,0,0,5" Text="API Key" />
                                         <ui:TextBox
-
                                             Width="200"
                                             Height="30"
                                             Padding="10,4,10,7"
                                             FontSize="13.3"
-
-                                            Text="{Binding Configs[Baidu].AppSecret, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-									</StackPanel>
-								</Grid>
-							</ui:Card>
-						</StackPanel>
-
                                             Text="{Binding Configs[MTranServerCore].ApiKey, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                     </StackPanel>
                                 </Grid>
                             </ui:Card>
                         </StackPanel>
 
+                        <StackPanel x:Name="BaiduSection" Margin="20">
+                            <TextBlock
+                                Margin="10"
+                                FontSize="20"
+                                FontWeight="Medium"
+                                Text="Baidu" />
+                            <ui:Card Padding="15">
+                                <Grid x:Name="BaiduGrid">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+
+                                    <StackPanel
+                                        Grid.Row="0"
+                                        Grid.Column="0"
+                                        Margin="15,0,0,0"
+                                        Orientation="Vertical">
+                                        <ui:TextBlock Margin="2.5,0,0,5" Text="API Url" />
+                                        <ui:TextBox
+                                            Width="130"
+                                            Height="30"
+                                            Padding="10,4,10,7"
+                                            FontSize="13.3"
+                                            Text="{Binding Configs[Baidu].ApiUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                    </StackPanel>
+                                    <StackPanel
+                                        Grid.Row="1"
+                                        Grid.Column="0"
+                                        Margin="15,10,0,0"
+                                        Orientation="Vertical">
+                                        <ui:TextBlock Margin="2.5,0,0,5" Text="APP ID" />
+                                        <ui:TextBox
+                                            Width="130"
+                                            Height="30"
+                                            Padding="10,4,10,7"
+                                            FontSize="13.3"
+                                            Text="{Binding Configs[Baidu].AppId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                    </StackPanel>
+                                    <StackPanel
+                                        Grid.Row="1"
+                                        Grid.Column="1"
+                                        Margin="15,10,0,0"
+                                        Orientation="Vertical">
+                                        <ui:TextBlock Margin="2.5,0,0,5" Text="APP Secret" />
+                                        <ui:TextBox
+                                            Width="200"
+                                            Height="30"
+                                            Padding="10,4,10,7"
+                                            FontSize="13.3"
+                                            Text="{Binding Configs[Baidu].AppSecret, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                    </StackPanel>
+                                </Grid>
+                            </ui:Card>
+                        </StackPanel>
                     </StackPanel>
                 </StackPanel>
             </ScrollViewer>
